added hbs files

--- a/src/mails/templates/password-reset.hbs
+++ b/src/mails/templates/password-reset.hbs
@@ -112,7 +112,7 @@
               Have questions or trouble logging in?
             </h3>
             <p class='help-text'>
-              Just reply to this email or contact support@bitdeposit.com
+              Just reply to this email or contact support
             </p>
           </div>
         </section>
